# cexpr-solver

./: .gitignore  CMakeLists.txt  README.md  expr_solver  main.c  syntax.txt
c/: ast.c  lookup.c  parser.c  settings.c  solver.c  token.c  tokenizer.c  util.c
h/: ast.h  lookup.h  parse.h  settings.h  token.h  tokenizer.h  util.h
src/: ast.c  lookup.c  parser.c  settings.c  solver.c  solver.h  token.c  tokenizer.c  util.c  util.h
